Cập nhật mới 25/07/2025

--- a/DichVu_GiaoXe.html
+++ b/DichVu_GiaoXe.html
@@ -6,7 +6,7 @@
     <title>VLA Motions</title>
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./assets/css/khuyenmai_hondash160i.css">
+    <link rel="stylesheet" href="./assets/css/DichVu_GiaoXe.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons-font/themify-icons/themify-icons.css">
 </head>
 <body>
@@ -114,65 +114,110 @@
                     
                 </div>
         </div>
-
+            
         <!-- Container -->
-        <div class="container container_khuyenmai">
-            <div class="khuyenmai_hondash160i-container-main-background" style="background-image: url(./assets/img/khuyenmai-hondash160i_main-background.jpg);"></div>
-            <h4 class="khuyenmai_hondash160i-heading">ĐẲNG CẤP XE MỚI, PHONG ĐỘ LÊN NGÔI</h4>
-            <div class="khuyenmai_hondash160i-info">
-                    <h5 class="khuyenmai_honda160i-name">Honda SH160i</h5>
-                    <div class="khuyenmai_honda160i-description">Honda SH 160i là mẫu xe tay ga cao cấp, biểu tượng của phong cách sống hiện đại và thành công. Thiết kế thanh lịch, mang hơi thở châu Âu với những đường nét tinh tế, sang trọng. Xe được trang bị động cơ eSP+ 4 van 157cc mạnh mẽ, tiết kiệm nhiên liệu, vận hành êm ái. SH 160i còn tích hợp nhiều công nghệ tiên tiến như hệ thống chống bó cứng phanh ABS, kiểm soát lực kéo HSTC và khóa thông minh Smart Key, mang đến trải nghiệm lái xe an toàn và tiện nghi.</div>
-            </div>
-            <div class="khuyenmai_hondash160i-info">
-                <div class="khuyenmai_hondash160i-title">TRẢ GÓP 0% - QUÀ XỊN GIÁ TỐT</div>
-                <div class="khuyenmai_hondash160i-title-description">Tháng 7 này, HEAD Giáp Bình Dương mang đến chương trình ưu đãi đặc biệt dành cho khách hàng: thu xe cũ không cần bù tiền, giảm giá xe mới, trả góp 0% và hàng loạt quà tặng giá trị.</div>
-            </div>
-            <div class="khuyenmai_hondash160i-content">
-                <div class="khuyenmai_hondash160i-content-header">
-                    <div class="khuyenmai_hondash160i-content-info">Thời gian áp dụng:</div>
-                    <div class="khuyenmai_hondash160i-content-time">Từ 15/07/2025 đến hết 15/08/2025</div>
+        <div class="container">
+            <div class="grid">
+                <h4 class="Dv__header">Dịch vụ nhận và giao xe tận nơi miễn phí *</h4>
+                <p>Thấu hiểu về vấn đề thời gian quý giá của Quý khách hàng và bận rộn về công việc ! AHQ Việt Nam cung cấp dịch Nhận & Giao xe tận nơi miễn phí (*) cho Quý khách hàng để giúp giảm thiểu ảnh hưởng thời gian của quý khách. Xe của Quý khách hàng sẽ được chúng tôi vận chuyển an toàn đến tận nơi cho Quý khách hàng.</p>
+
+                <div class="grid__row">
+                    <div class="grid__column-4-36px">
+                        <div class="background-img" style="background-image: url(./assets/img/DichVu_GiaoXe-img-1.png);"></div>
+                        <h5 class="title">Liên Hệ Đại Lý</h5>
+                        <ul class="list">
+                            <li class="item">
+                                Khách hàng liên hệ Đại lý online hoặc gọi điện thoại đến Đại lý
+                            </li>
+                            <li class="item">
+                                Nhân viên Đại lý sẽ giới thiệu chi tiết về các Dịch vụ và tư vấn cho Khách hàng
+                            </li>
+                            <li class="item">
+                                Giới thiệu các dịch vụ và mức chi phí.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="grid__column-4-36px">
+                        <div class="background-img" style="background-image: url(./assets/img/DichVu_GiaoXe-img-2.png);"></div>
+                        <h5 class="title">Đặt hẹn Tại Đại lý</h5>
+                        <ul class="list">
+                            <li class="item">
+                                Khách hàng gọi điện thoại đặt hẹn với Đại lý qua đường dây Chăm sóc Khách hàng (*)
+                            </li>
+                            <li class="item">
+                                Chọn Dịch vụ “ Nhận và Giao xe Tận nơi Miễn phí (**)
+                            </li>
+                            <li class="item">
+                                Nhân viên Đại lý sẽ giới thiệu chi tiết về Dịch vụ và tư vấn cho Khách hàng
+                            </li>
+                            <li class="item">
+                                Nhân viên Đại lý xác nhận cuộc hẹn với khách hàng
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="grid__column-4-36px">
+                        <div class="background-img" style="background-image: url(./assets/img/DichVu_GiaoXe-img-3.png);"></div>
+                        <h5 class="title">Tiếp nhận xe tại nhà</h5>
+                        <ul class="list">
+                            <li class="item">
+                                Nhân viên Đại lý đến nhà Khách hàng nhận xe
+                            </li>
+                            <li class="item">
+                                Tiếp nhận xe và kiểm thử tại chỗ
+                            </li>
+                            <li class="item">
+                                Lái xe Khách hàng về xưởng Dịch vụ
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="grid__column-4-36px">
+                        <div class="background-img" style="background-image: url(./assets/img/DichVu_GiaoXe-img-4.png);"></div>
+                        <h5 class="title">Tiến hành sửa chữa</h5>
+                        <ul class="list">
+                            <li class="item">
+                                Cố vấn Dịch vụ kiểm tra xe và gọi điện thoại thông báo/ báo giá cho Khách hàng
+                            </li>
+                            <li class="item">
+                                Thực hiện sửa chữa
+                            </li>
+                            <li class="item">
+                                Vệ sinh xe sau khi sửa chữa
+                            </li>
+                            <li class="item">
+                                Xác nhận phương thức thanh toán và thời gian giao xe
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="grid__column-4-36px">
+                        <div class="background-img" style="background-image: url(./assets/img/DichVu_GiaoXe-img-5.png);"></div>
+                        <h5 class="title">Bàn giao xe tại nhà</h5>
+                        <ul class="list">
+                            <li class="item">
+                                Nhân viên Đại lý đến nhà Khách hàng trả xe
+                            </li>
+                            <li class="item">
+                                Bàn giao xe và tiến hành khử khuẩn nhanh tại chỗ
+                            </li>
+                            <li class="item">
+                                Đặt phiếu thông báo đã khử khuẩn lên xe Khách hàng
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="grid__column-4-36px">
+                        <div class="background-img" style="background-image: url(./assets/img/DichVu_GiaoXe-img-6.png);"></div>
+                        <h5 class="title">Thanh toán chi phí</h5>
+                        <ul class="list">
+                            <li class="item">
+                                Tiếp nhận hóa đơn và tiến hành thanh toán.
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="khuyenmai_hondash160i-content-check-list">Check-list Ưu Đãi Tháng 7:</div>
-                <ul class="khuyenmai_hondash160i-content-list">
-                    <li class="khuyenmai_hondash160i-content-item">
-                        Giảm giá xe: Có
-                    </li>
-                    <li class="khuyenmai_hondash160i-content-item">
-                        Thu xe cũ - đổi xe mới  
-                        <span>Không cần bù tiền</span>
-                    </li>
-                    <li class="khuyenmai_hondash160i-content-item">
-                       Trả góp 0% lãi suất: CÓ
-                    </li>
-                    <li class="khuyenmai_hondash160i-content-item">
-                        Quà tặng hấp dẫn: CỰC NHIỀU
-                    </li>
-                </ul> 
-            </div>
 
-            <ul class="khuyenmai_hondash160i-gift">
-                <div class="khuyenmai_hondash160i-gift-name">Các phần quà khác</div>
-                <span>Khách hàng được nhận 2 trong các phần quà dưới đây</span>
-                <ul class="khuyenmai_hondash160i-gift-list">
-                    <li class="khuyenmai_hondash160i-gift-item">
-                        Tai nghe Samsung chính hãng
-                    </li>
-                    <li class="khuyenmai_hondash160i-gift-item">
-                        Voucher phụ kiện trị giá 1.600.000 VNĐ
-                    </li>
-                    <li class="khuyenmai_hondash160i-gift-item">
-                        Dán decal bảo vệ xe trị giá 2.000.000 VNĐ
-                    </li>
-                    <li class="khuyenmai_hondash160i-gift-item">
-                        Miễn phí thay nhớt trong vòng 1 năm
-                    </li>
-                    <li class="khuyenmai_hondash160i-gift-item">
-                        Thẻ quà tặng trị giá 1.500.000 cho dịch vụ bảo dưỡng 
-                    </li>
-                </ul>
-            </div>
 
+            </div>
         </div>
+
 
         <!-- Footer -->
         <div class="footer">
