--- a/index.html
+++ b/index.html
@@ -12,106 +12,106 @@
     <div class="main">
         <!-- Header -->
         <div class="header">
-            <div class="header__navbar">
-                <div class="grid">
-                    <div class="header__navbar-logo">
-                        <a href="index.html">
-                            <img src="./assets/img/logo.png" alt="" class="header__navbar-logo-img">
-                        </a>
+                <div class="header__navbar">
+                    <div class="grid">
+                        <div class="header__navbar-logo">
+                            <a href="index.html">
+                                <img src="./assets/img/logo.png" alt="" class="header__navbar-logo-img">
+                            </a>
+                        </div>
+
+                        <div class="header__navbar-menu">
+                            <ul class="header__navbar-list">
+                                <li class="header__navbar-item header__navbar-item-motobike">
+                                    Xe máy
+                                    <i class="header__navbar-icon ti-angle-down"></i>
+                                    <div class="header__navbar-motobike">
+                                        <h4>Loại Xe</h4>
+
+                                        <ul class="header__navbar-type">
+                                            <li class="header__navbar-motobike-item">
+                                                <a href="">Xe côn tay</a>
+                                            </li>
+                                            <li class="header__navbar-motobike-item">
+                                                <a href="xeso.html">Xe số</a>
+                                            </li>
+                                            <li class="header__navbar-motobike-item">
+                                                <a href="">Xe tay ga</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="header__navbar-item header__navbar-item-car">
+                                    Ô Tô
+                                    <i class="header__navbar-icon ti-angle-down"></i>
+                                    <div class="header__navbar-car">
+                                        <h4>Loại Xe</h4>
+
+                                        <ul class="header__navbar-type">
+                                            <li class="header__navbar-car-item">
+                                                <a href="">Xe du lịch</a>
+                                            </li>
+                                            <li class="header__navbar-car-item">
+                                                <a href="">Xe thương mại</a>
+                                            </li>
+                                            <li class="header__navbar-car-item">
+                                                <a href="">Xe địa hình</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="header__navbar-item header__navbar-price">
+                                    Bảng giá
+                                    <i class="header__navbar-icon ti-angle-down"></i>
+                                        <ul class="header__navbar-price-list">
+                                            <li class="header__navbar-price-item">
+                                                <a href="">Xe du lịch</a>
+                                            </li>
+                                            <li class="header__navbar-price-item">
+                                                <a href="">Xe thương mại</a>
+                                            </li>
+                                        </ul>
+                                </li>
+                                <li class="header__navbar-item">
+                                    <a href="daily.html" class="header__navbar-agency">Đại lý</a>
+                                </li>
+                                <li class="header__navbar-item">
+                                    <a href="khuyenmai.html" class="header__navbar-promotion">Khuyến mãi</a>
+                                </li>
+                                <li class="header__navbar-item header__navbar-service">
+                                    Dịch vụ
+                                    <i class="header__navbar-icon ti-angle-down"></i>
+                                    <ul class="header__navbar-service-list">
+                                        <li class="service-item">
+                                            <a href="DichVu_BaoHanh.html" class="sercive-link">Dịch vụ bảo hành</a>
+                                        </li>
+                                        <li class="service-item">
+                                            <a href="DichVu_DangKyChayThu.html" class="sercive-link">Đăng ký chạy thử</a>
+                                        </li>
+                                        <li class="service-item">
+                                            <a href="DichVu_GiaoXe.html" class="sercive-link">Giao xe tận nơi</a>
+                                        </li>
+                                        <li class="service-item">
+                                            <a href="DichVu_DangKyBienSoXe.html" class="sercive-link">Đăng ký biển số</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="header__navbar-seach ">
+                                    <input type="checkbox" id="searchToggle" hidden>
+
+                                    <label for="searchToggle" class="search-icon-label">
+                                        <i class="ti-search"></i> 
+                                    </label>
+
+                                    <div class="search-box ">
+                                        <input type="text" id="searchInput" placeholder="Tìm kiếm...">
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-
-                    <div class="header__navbar-menu">
-                        <ul class="header__navbar-list">
-                            <li class="header__navbar-item header__navbar-item-motobike">
-                                Xe máy
-                                <i class="header__navbar-icon ti-angle-down"></i>
-                                <div class="header__navbar-motobike">
-                                    <h4>Loại Xe</h4>
-
-                                    <ul class="header__navbar-type">
-                                        <li class="header__navbar-motobike-item">
-                                            <a href="">Xe côn tay</a>
-                                        </li>
-                                        <li class="header__navbar-motobike-item">
-                                            <a href="">Xe số</a>
-                                        </li>
-                                        <li class="header__navbar-motobike-item">
-                                            <a href="">Xe tay ga</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="header__navbar-item header__navbar-item-car">
-                                Ô Tô
-                                <i class="header__navbar-icon ti-angle-down"></i>
-                                <div class="header__navbar-car">
-                                    <h4>Loại Xe</h4>
-
-                                    <ul class="header__navbar-type">
-                                        <li class="header__navbar-car-item">
-                                            <a href="">Xe du lịch</a>
-                                        </li>
-                                        <li class="header__navbar-car-item">
-                                            <a href="">Xe thương mại</a>
-                                        </li>
-                                        <li class="header__navbar-car-item">
-                                            <a href="">Xe địa hình</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="header__navbar-item header__navbar-price">
-                                Bảng giá
-                                <i class="header__navbar-icon ti-angle-down"></i>
-                                    <ul class="header__navbar-price-list">
-                                        <li class="header__navbar-price-item">
-                                            <a href="">Xe du lịch</a>
-                                        </li>
-                                        <li class="header__navbar-price-item">
-                                            <a href="">Xe thương mại</a>
-                                        </li>
-                                    </ul>
-                            </li>
-                            <li class="header__navbar-item">
-                                <a href="daily.html" class="header__navbar-agency">Đại lý</a>
-                            </li>
-                            <li class="header__navbar-item">
-                                <a href="khuyenmai.html" class="header__navbar-promotion">Khuyến mãi</a>
-                            </li>
-                            <li class="header__navbar-item header__navbar-service">
-                                Dịch vụ
-                                <i class="header__navbar-icon ti-angle-down"></i>
-                                <ul class="header__navbar-service-list">
-                                    <li class="service-item">
-                                        <a href="" class="sercive-link">Dịch vụ bảo hành</a>
-                                    </li>
-                                    <li class="service-item">
-                                        <a href="" class="sercive-link">Đăng ký chạy thử</a>
-                                    </li>
-                                    <li class="service-item">
-                                        <a href="" class="sercive-link">Giao xe tận nơi</a>
-                                    </li>
-                                    <li class="service-item">
-                                        <a href="" class="sercive-link">Đăng ký biển số</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="header__navbar-seach ">
-                                <input type="checkbox" id="searchToggle" hidden>
-
-                                <label for="searchToggle" class="search-icon-label">
-                                    <i class="ti-search"></i> 
-                                </label>
-
-                                <div class="search-box ">
-                                    <input type="text" id="searchInput" placeholder="Tìm kiếm...">
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                    
                 </div>
-                
-            </div>
         </div>
 
         <!-- Container -->
@@ -276,23 +276,23 @@
                                         </a>
                                 </div>
                                 <div class="grid__column-4">
-                                    <a href="" class="container__section-item">
+                                    <a href="DichVu_DangKyChayThu.html" class="container__section-item">
                                         <div class="container__section-item-img" style="background-image: url(./assets/img/container__section--chaythu.webp);"></div>
                                     </a>    
                                         <h4 class="container__section-item-name">Đăng ký chạy thử</h4>
                                         <span class="container__section-item-description">Sử dụng thử trước khi mua các dòng xe mới nhất hoàn toàn miễn phí</span>
-                                        <a href="" class="container__section-item-link">
+                                        <a href="DichVu_DangKyChayThu.html" class="container__section-item-link">
                                             <span class="container__section-item-link-info">Xem chi tiết</span>
                                             <i class="container__section-item-icon ti-arrow-right"></i>
                                         </a>
                                 </div>
                                 <div class="grid__column-4">
-                                    <a href="" class="container__section-item">
+                                    <a href="DichVu_BaoHanh.html" class="container__section-item">
                                         <div class="container__section-item-img" style="background-image: url(./assets/img/container__section--baohanh.webp);"></div>
                                     </a>    
                                         <h4 class="container__section-item-name">Dịch vụ bảo hành</h4>
                                         <span class="container__section-item-description">Dịch vụ bảo hành chính hãng với đội ngũ chuyên gia tận tâm, đảm bảo sự hài lòng và yên tâm của khách hàng khi mua hàng.</span>
-                                        <a href="" class="container__section-item-link">
+                                        <a href="DichVu_BaoHanh.html" class="container__section-item-link">
                                             <span class="container__section-item-link-info">Xem chi tiết</span>
                                             <i class="container__section-item-icon ti-arrow-right"></i>
                                         </a>
@@ -308,25 +308,25 @@
                     <h4 class="container__service-heading">Dịch vụ khi mua xe</h4>
                     <div class="grid__row">
                         <div class="grid__column-3">
-                            <a href="" class="container__service-item">
+                            <a href="DichVu_DangKyBienSoXe.html" class="container__service-item">
                                 <div class="container__service-img" style="background-image: url(./assets/img/container__service-dangkybienso.jpg);"></div>
                                 <span class="container__service-name">Đăng ký biển số xe</span>
                             </a>
                         </div>
                         <div class="grid__column-3">
-                            <a href="" class="container__service-item">
+                            <a href="DichVu_DangKyChayThu.html" class="container__service-item">
                                 <div class="container__service-img" style="background-image: url(./assets/img/container__service-laithu.jpg);"></div>
                                 <span class="container__service-name">Đăng ký chạy thử</span>
                             </a>
                         </div>
                         <div class="grid__column-3">
-                            <a href="" class="container__service-item">
+                            <a href="DichVu_GiaoXe.html" class="container__service-item">
                                 <div class="container__service-img" style="background-image: url(./assets/img/container__service-giaoxe.jpg);"></div>
                                 <span class="container__service-name">Giao xe tận nơi</span>
                             </a>
                         </div>
                         <div class="grid__column-3">
-                            <a href="" class="container__service-item">
+                            <a href="DichVu_BaoHanh.html" class="container__service-item">
                                 <div class="container__service-img" style="background-image: url(./assets/img/container__service-baohanh.jpg);"></div>
                                 <span class="container__service-name">Bảo hành</span>
                             </a>
