--- a/khuyenmai.html
+++ b/khuyenmai.html
@@ -13,106 +13,106 @@
     <div class="main">
         <!-- Header -->
         <div class="header">
-            <div class="header__navbar">
-                <div class="grid">
-                    <div class="header__navbar-logo">
-                        <a href="index.html">
-                            <img src="./assets/img/logo.png" alt="" class="header__navbar-logo-img">
-                        </a>
+                <div class="header__navbar">
+                    <div class="grid">
+                        <div class="header__navbar-logo">
+                            <a href="index.html">
+                                <img src="./assets/img/logo.png" alt="" class="header__navbar-logo-img">
+                            </a>
+                        </div>
+
+                        <div class="header__navbar-menu">
+                            <ul class="header__navbar-list">
+                                <li class="header__navbar-item header__navbar-item-motobike">
+                                    Xe máy
+                                    <i class="header__navbar-icon ti-angle-down"></i>
+                                    <div class="header__navbar-motobike">
+                                        <h4>Loại Xe</h4>
+
+                                        <ul class="header__navbar-type">
+                                            <li class="header__navbar-motobike-item">
+                                                <a href="">Xe côn tay</a>
+                                            </li>
+                                            <li class="header__navbar-motobike-item">
+                                                <a href="xeso.html">Xe số</a>
+                                            </li>
+                                            <li class="header__navbar-motobike-item">
+                                                <a href="">Xe tay ga</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="header__navbar-item header__navbar-item-car">
+                                    Ô Tô
+                                    <i class="header__navbar-icon ti-angle-down"></i>
+                                    <div class="header__navbar-car">
+                                        <h4>Loại Xe</h4>
+
+                                        <ul class="header__navbar-type">
+                                            <li class="header__navbar-car-item">
+                                                <a href="">Xe du lịch</a>
+                                            </li>
+                                            <li class="header__navbar-car-item">
+                                                <a href="">Xe thương mại</a>
+                                            </li>
+                                            <li class="header__navbar-car-item">
+                                                <a href="">Xe địa hình</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="header__navbar-item header__navbar-price">
+                                    Bảng giá
+                                    <i class="header__navbar-icon ti-angle-down"></i>
+                                        <ul class="header__navbar-price-list">
+                                            <li class="header__navbar-price-item">
+                                                <a href="">Xe du lịch</a>
+                                            </li>
+                                            <li class="header__navbar-price-item">
+                                                <a href="">Xe thương mại</a>
+                                            </li>
+                                        </ul>
+                                </li>
+                                <li class="header__navbar-item">
+                                    <a href="daily.html" class="header__navbar-agency">Đại lý</a>
+                                </li>
+                                <li class="header__navbar-item">
+                                    <a href="khuyenmai.html" class="header__navbar-promotion">Khuyến mãi</a>
+                                </li>
+                                <li class="header__navbar-item header__navbar-service">
+                                    Dịch vụ
+                                    <i class="header__navbar-icon ti-angle-down"></i>
+                                    <ul class="header__navbar-service-list">
+                                        <li class="service-item">
+                                            <a href="DichVu_BaoHanh.html" class="sercive-link">Dịch vụ bảo hành</a>
+                                        </li>
+                                        <li class="service-item">
+                                            <a href="DichVu_DangKyChayThu.html" class="sercive-link">Đăng ký chạy thử</a>
+                                        </li>
+                                        <li class="service-item">
+                                            <a href="DichVu_GiaoXe.html" class="sercive-link">Giao xe tận nơi</a>
+                                        </li>
+                                        <li class="service-item">
+                                            <a href="DichVu_DangKyBienSoXe.html" class="sercive-link">Đăng ký biển số</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="header__navbar-seach ">
+                                    <input type="checkbox" id="searchToggle" hidden>
+
+                                    <label for="searchToggle" class="search-icon-label">
+                                        <i class="ti-search"></i> 
+                                    </label>
+
+                                    <div class="search-box ">
+                                        <input type="text" id="searchInput" placeholder="Tìm kiếm...">
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-
-                    <div class="header__navbar-menu">
-                        <ul class="header__navbar-list">
-                            <li class="header__navbar-item header__navbar-item-motobike">
-                                Xe máy
-                                <i class="header__navbar-icon ti-angle-down"></i>
-                                <div class="header__navbar-motobike">
-                                    <h4>Loại Xe</h4>
-
-                                    <ul class="header__navbar-type">
-                                        <li class="header__navbar-motobike-item">
-                                            <a href="">Xe côn tay</a>
-                                        </li>
-                                        <li class="header__navbar-motobike-item">
-                                            <a href="">Xe số</a>
-                                        </li>
-                                        <li class="header__navbar-motobike-item">
-                                            <a href="">Xe tay ga</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="header__navbar-item header__navbar-item-car">
-                                Ô Tô
-                                <i class="header__navbar-icon ti-angle-down"></i>
-                                <div class="header__navbar-car">
-                                    <h4>Loại Xe</h4>
-
-                                    <ul class="header__navbar-type">
-                                        <li class="header__navbar-car-item">
-                                            <a href="">Xe du lịch</a>
-                                        </li>
-                                        <li class="header__navbar-car-item">
-                                            <a href="">Xe thương mại</a>
-                                        </li>
-                                        <li class="header__navbar-car-item">
-                                            <a href="">Xe địa hình</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="header__navbar-item header__navbar-price">
-                                Bảng giá
-                                <i class="header__navbar-icon ti-angle-down"></i>
-                                    <ul class="header__navbar-price-list">
-                                        <li class="header__navbar-price-item">
-                                            <a href="">Xe du lịch</a>
-                                        </li>
-                                        <li class="header__navbar-price-item">
-                                            <a href="">Xe thương mại</a>
-                                        </li>
-                                    </ul>
-                            </li>
-                            <li class="header__navbar-item">
-                                <a href="daily.html" class="header__navbar-agency">Đại lý</a>
-                            </li>
-                            <li class="header__navbar-item">
-                                <a href="khuyenmai.html" class="header__navbar-promotion">Khuyến mãi</a>
-                            </li>
-                            <li class="header__navbar-item header__navbar-service">
-                                Dịch vụ
-                                <i class="header__navbar-icon ti-angle-down"></i>
-                                <ul class="header__navbar-service-list">
-                                    <li class="service-item">
-                                        <a href="" class="sercive-link">Dịch vụ bảo hành</a>
-                                    </li>
-                                    <li class="service-item">
-                                        <a href="" class="sercive-link">Đăng ký chạy thử</a>
-                                    </li>
-                                    <li class="service-item">
-                                        <a href="" class="sercive-link">Giao xe tận nơi</a>
-                                    </li>
-                                    <li class="service-item">
-                                        <a href="" class="sercive-link">Đăng ký biển số</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="header__navbar-seach ">
-                                <input type="checkbox" id="searchToggle" hidden>
-
-                                <label for="searchToggle" class="search-icon-label">
-                                    <i class="ti-search"></i> 
-                                </label>
-
-                                <div class="search-box ">
-                                    <input type="text" id="searchInput" placeholder="Tìm kiếm...">
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
+                    
                 </div>
-                
-            </div>
         </div>
 
         <!-- Container -->
